--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   firebase_auth: ^4.3.0
   cloud_firestore: ^4.4.5
   firebase_analytics: ^10.1.6
+  go_router: ^6.3.0
 
 dev_dependencies:
   flutter_test:
