--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,9 @@ dependencies:
   cloud_firestore: ^4.4.5
   firebase_analytics: ^10.1.6
   go_router: ^6.3.0
+  sqflite: ^2.2.6
+  path_provider: ^2.0.14
+  path: ^1.8.2
 
 dev_dependencies:
   flutter_test:
