--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -47,6 +47,22 @@ dependencies:
   bloc: ^8.1.1
   flutter_bloc: ^8.1.2
   equatable: ^2.0.5
+  pdf: ^3.6.0
+  pointycastle: ^3.7.3
+  convert: ^3.1.1
+  basic_utils: ^5.5.4
+  dart_jsonwebtoken: ^2.7.1
+  qr_flutter: ^4.0.0
+  image: ^3.1.3
+  file_picker: ^5.2.10
+  syncfusion_flutter_signaturepad: ^21.2.3
+  open_file_plus: ^3.4.1
+  qr_code_scanner: ^1.0.1
+  pdf_render: ^1.3.8
+  syncfusion_flutter_pdf: ^21.2.5
+  mobile_scanner: ^3.2.0
+  flutter_launcher_icons: ^0.11.0
+ 
 
 dev_dependencies:
   flutter_test:
